--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,16 @@ li{
   margin-top: 5px;
   background-color: rgb(23, 29, 41);
 }
-
+ul{
+  display: inline;
+}
 .card{
   margin: 5px auto;
   background-color: rgb(23, 29, 41);
   border-radius: 5px;
   max-width: fit-content;
 }
+
 button{
   padding: 0px 15px 0 15px;
   font-family: 'Gloria Hallelujah', cursive;
